# rain_alarm

./: .gitignore  pyproject.toml  radar_tile_explorer.ipynb
src/: check_radar_image.py  main.py
