[project]
name = "rain-alarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]
